--- a/cloud/iaas-mgmt/virt-api/pom.xml
+++ b/cloud/iaas-mgmt/virt-api/pom.xml
@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 2011-2012 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2011-2013 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -46,12 +46,16 @@
     <parent>
         <groupId>org.glassfish.main.virtualization</groupId>
         <artifactId>virtualization</artifactId>
-        <version>4.0-b33</version>
+        <version>4.0-SNAPSHOT</version>
     </parent>
     <artifactId>virt-api</artifactId>
-    <packaging>hk2-jar</packaging>
     <name>Virtualization Bootstrap and Config Classes</name>
     <dependencies>
+    	<dependency>
+            <groupId>org.glassfish.hk2</groupId>
+            <artifactId>hk2-deprecated</artifactId>
+            <version>2.1.9</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.main.admin</groupId>
             <artifactId>config-api</artifactId>
