--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -2,7 +2,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 2012 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2012-2013 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -44,22 +44,22 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.glassfish.main</groupId>
-        <artifactId>glassfish-main-parent</artifactId>
-        <version>4.0-b33</version>
-        <relativePath>../pom.xml</relativePath>
+        <artifactId>glassfish-nucleus-parent</artifactId>
+        <version>4.0-SNAPSHOT</version>
+        <relativePath>../nucleus/pom.xml</relativePath>
     </parent>
     <artifactId>glassfish-cloud-parent</artifactId>
     <packaging>pom</packaging>
     <name>PaaS related modules</name>
     <modules>
         <module>iaas-mgmt</module>
-        <module>iaas-mgmt-plugins</module>
+        <!--<module>iaas-mgmt-plugins</module>
         <module>orchestrator</module>
         <module>tenant-manager</module>
 	<module>elasticity</module>
 	<module>service-mgmt</module>
 	<module>service-mgmt-plugins</module>
         <module>admin</module>
-        <module>gui</module>
+        <module>gui</module>-->
     </modules>
 </project>
