--- a/cloud/iaas-mgmt/virt-core/pom.xml
+++ b/cloud/iaas-mgmt/virt-core/pom.xml
@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 2011 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2011-2013 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -46,10 +46,9 @@
     <parent>
         <groupId>org.glassfish.main.virtualization</groupId>
         <artifactId>virtualization</artifactId>
-        <version>4.0-b33</version>
+        <version>4.0-SNAPSHOT</version>
     </parent>
     <artifactId>virt-core</artifactId>
-    <packaging>hk2-jar</packaging>
     <name>Virtualization Core Classes</name>
     <dependencies>
         <dependency>
