--- a/cloud/service-mgmt/spe-base/pom.xml
+++ b/cloud/service-mgmt/spe-base/pom.xml
@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 2012 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2012-2013 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -45,13 +45,12 @@
     <parent>
         <groupId>org.glassfish.main</groupId>
         <artifactId>paas.spe</artifactId>
-        <version>4.0-b33</version>
+        <version>4.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>paas.spe-base</artifactId>
-    <packaging>hk2-jar</packaging>
-    <version>4.0-b33</version>
+    <version>4.0-SNAPSHOT</version>
     <name>Base for building Service Provisioning Engines</name>
 
     <build>
